# luaing

./: README.md  regEngine  test.sh  test1.txt
reg_engine/: CMakeLists.txt  Makefile  edge.h  main.cc  nfa.cc  nfa.h  resource.h  state.cc  state.h
